--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -116,31 +116,31 @@ padding: 16px;
 <div class="gallery">
 
   <img src="unistoff/WhatsApp Image 2021-09-16 at 16.30.17.jpeg" alt="WhatsApp Image 2021-09-16 at 16.30.17" title="WhatsApp Image 2021-09-16 at 16.30.17" width="2048" height="2048" />
-    <div class="desc">Baumwolljersey</div>  <div class="desc"> hellgrau</div> 
+    <div class="desc"> hellgrau</div> <div class="desc">Baumwolljersey</div>  
 
   <img src="unistoff/WhatsApp Image 2021-09-16 at 16.30.34.jpeg" alt="WhatsApp Image 2021-09-16 at 16.30.34" title="WhatsApp Image 2021-09-16 at 16.30.34" width="2048" height="2048" />
-    <div class="desc">Baumwolljersey </div>  <div class="desc"> ocker</div>
+    <div class="desc"> ocker</div> <div class="desc">Baumwolljersey</div>  
 
   <img src="unistoff/WhatsApp Image 2021-09-16 at 16.30.46.jpeg" alt="WhatsApp Image 2021-09-16 at 16.30.46" title="WhatsApp Image 2021-09-16 at 16.30.46" width="2048" height="2048" />
-    <div class="desc">Baumwolljersey </div>  <div class="desc"> pink</div>
+    <div class="desc"> pink</div> <div class="desc">Baumwolljersey</div>  
     
   <img src="unistoff/WhatsApp Image 2021-09-16 at 16.31.02.jpeg" alt="WhatsApp Image 2021-09-16 at 16.31.02" title="WhatsApp Image 2021-09-16 at 16.31.02" width="2048" height="2048" />
-    <div class="desc">Baumwolljersey </div>  <div class="desc"> rot</div>
+    <div class="desc"> rot</div> <div class="desc">Baumwolljersey</div>  
 
   <img src="unistoff/WhatsApp Image 2021-09-16 at 16.31.18.jpeg" alt="WhatsApp Image 2021-09-16 at 16.31.18" title="WhatsApp Image 2021-09-16 at 16.31.18" width="2048" height="2048" />
-    <div class="desc">Baumwolljersey </div>  <div class="desc"> hellblau</div>
+    <div class="desc"> hellblau</div> <div class="desc">Baumwolljersey</div>  
 
   <img src="unistoff/WhatsApp Image 2021-09-16 at 16.31.32.jpeg" alt="WhatsApp Image 2021-09-16 at 16.31.32" title="WhatsApp Image 2021-09-16 at 16.31.32" width="2048" height="2048" />
-    <div class="desc">Baumwolljersey </div>  <div class="desc"> navy</div>
+    <div class="desc"> navy</div> <div class="desc">Baumwolljersey</div>  
 
   <img src="unistoff/WhatsApp Image 2021-09-16 at 16.32.17.jpeg" alt="WhatsApp Image 2021-09-16 at 16.32.17" title="WhatsApp Image 2021-09-16 at 16.32.17" width="2048" height="2048" />
-    <div class="desc">Baumwolljersey </div>  <div class="desc"> schwarz</div>
+    <div class="desc"> schwarz</div> <div class="desc">Baumwolljersey</div>  
 
   <img src="unistoff/WhatsApp Image 2021-09-16 at 16.32.39.jpeg" alt="WhatsApp Image 2021-09-16 at 16.32.39" title="WhatsApp Image 2021-09-16 at 16.32.39" width="2048" height="2048" />
-    <div class="desc">Sommersweat </div>  <div class="desc"> hellgrau</div>
+    <div class="desc"> hellgrau</div> <div class="desc">Sommersweat </div> 
 
   <img src="unistoff/WhatsApp Image 2021-09-16 at 16.32.53.jpeg" alt="WhatsApp Image 2021-09-16 at 16.32.53" title="WhatsApp Image 2021-09-16 at 16.32.53" width="2048" height="2048" />
-    <div class="desc">Sommersweat </div>  <div class="desc"> dunkelgrau</div>
+    <div class="desc"> dunkelgrau</div> <div class="desc">Sommersweat </div>
 
   <img src="unistoff/WhatsApp Image 2021-09-16 at 16.33.16.jpeg" alt="WhatsApp Image 2021-09-16 at 16.33.16" title="WhatsApp Image 2021-09-16 at 16.33.16" width="2048" height="2048" />
     <div class="desc">Sommersweat &#8211; ocker</div>
