--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -143,43 +143,43 @@ padding: 16px;
     <div class="desc"> dunkelgrau</div> <div class="desc">Sommersweat </div>
 
   <img src="unistoff/WhatsApp Image 2021-09-16 at 16.33.16.jpeg" alt="WhatsApp Image 2021-09-16 at 16.33.16" title="WhatsApp Image 2021-09-16 at 16.33.16" width="2048" height="2048" />
-    <div class="desc">Sommersweat </div> <div ocker</div>
+    <div class="desc">Sommersweat </div> <div class="desc"> ocker</div>
 
   <img src="unistoff/WhatsApp Image 2021-09-16 at 16.33.29.jpeg" alt="WhatsApp Image 2021-09-16 at 16.33.29" title="WhatsApp Image 2021-09-16 at 16.33.29" width="2048" height="2048" />
-    <div class="desc">Sommersweat </div> <div rost</div>
+    <div class="desc">Sommersweat </div> <div class="desc"> rost</div>
 
  <img src="unistoff/WhatsApp Image 2021-09-16 at 16.33.52.jpeg" alt="WhatsApp Image 2021-09-16 at 16.33.52" title="WhatsApp Image 2021-09-16 at 16.33.52" width="2048" height="2048" />
-    <div class="desc">Sommersweat </div> <div blau</div>
+    <div class="desc">Sommersweat </div> <div class="desc"> blau</div>
 
   <img src="unistoff/WhatsApp Image 2021-09-16 at 16.34.17.jpeg" alt="WhatsApp Image 2021-09-16 at 16.34.17" title="WhatsApp Image 2021-09-16 at 16.34.17" width="2048" height="2048" />
-    <div class="desc">Sommersweat </div> <div indigoblau</div>
+    <div class="desc">Sommersweat </div> <div class="desc"> indigoblau</div>
 
   <img src="unistoff/WhatsApp Image 2021-09-16 at 16.34.40.jpeg" alt="WhatsApp Image 2021-09-16 at 16.34.40" title="WhatsApp Image 2021-09-16 at 16.34.40" width="2048" height="2048" />
-    <div class="desc">Sommersweat </div> <div gr&uuml;n</div>
+    <div class="desc">Sommersweat </div> <div  class="desc"> gr&uuml;n</div>
 
   <img src="unistoff/WhatsApp Image 2021-09-16 at 16.34.59.jpeg" alt="WhatsApp Image 2021-09-16 at 16.34.59" title="WhatsApp Image 2021-09-16 at 16.34.59" width="2048" height="2048" />
-    <div class="desc">Sommersweat </div> <div navy</div>
+    <div class="desc">Sommersweat </div> <div class="desc"> navy</div>
 
   <img src="unistoff/WhatsApp Image 2021-09-16 at 16.35.31.jpeg" alt="WhatsApp Image 2021-09-16 at 16.35.31" title="WhatsApp Image 2021-09-16 at 16.35.31" width="2048" height="2048" />
-    <div class="desc">Sommersweat </div> <div schneeweiss</div>
+    <div class="desc">Sommersweat </div> <div class="desc"> schneeweiss</div>
 
   <img src="unistoff/WhatsApp Image 2021-09-16 at 16.35.46.jpeg" alt="WhatsApp Image 2021-09-16 at 16.35.46" title="WhatsApp Image 2021-09-16 at 16.35.46" width="2048" height="2048" />
-    <div class="desc">Fleecestoff </div> <div purpur</div>
+    <div class="desc">Fleecestoff </div> <div class="desc"> purpur</div>
 
   <img src="unistoff/WhatsApp Image 2021-09-16 at 16.36.17.jpeg" alt="WhatsApp Image 2021-09-16 at 16.36.17" title="WhatsApp Image 2021-09-16 at 16.36.17" width="2048" height="2048" />
-    <div class="desc">Fleecestoff </div> <div ocker</div>
+    <div class="desc">Fleecestoff </div> <div class="desc"> ocker</div>
 
   <img src="unistoff/WhatsApp Image 2021-09-16 at 16.36.36.jpeg" alt="WhatsApp Image 2021-09-16 at 16.36.36" title="WhatsApp Image 2021-09-16 at 16.36.36" width="2048" height="2048" />
-    <div class="desc">Fleecestoff </div> <div blau</div>
+    <div class="desc">Fleecestoff </div> <div class="desc"> blau</div>
 
   <img src="unistoff/WhatsApp Image 2021-09-16 at 16.36.59.jpeg" alt="WhatsApp Image 2021-09-16 at 16.36.59" title="WhatsApp Image 2021-09-16 at 16.36.59" width="2048" height="2048" />
-    <div class="desc">Fleecestoff </div> <div dunkelblau</div>
+    <div class="desc">Fleecestoff </div> <div class="desc"> dunkelblau</div>
 
   <img src="unistoff/WhatsApp Image 2021-09-16 at 16.37.30.jpeg" alt="WhatsApp Image 2021-09-16 at 16.37.30" title="WhatsApp Image 2021-09-16 at 16.37.30" width="2048" height="2048" />
-    <div class="desc">Fleecestoff </div> <div braun</div>
+    <div class="desc">Fleecestoff </div> <div class="desc"> braun</div>
 
   <img src="unistoff/WhatsApp Image 2021-09-16 at 16.37.48.jpeg" alt="WhatsApp Image 2021-09-16 at 16.37.48" title="WhatsApp Image 2021-09-16 at 16.37.48" width="2048" height="2048" />
-    <div class="desc">Fleecestoff </div> <div schwarz</div>
+    <div class="desc">Fleecestoff </div> <div class="desc"> schwarz</div>
 
   <img src="unistoff/WhatsApp Image 2021-09-16 at 16.38.34.jpeg" alt="WhatsApp Image 2021-09-16 at 16.38.34" title="WhatsApp Image 2021-09-16 at 16.38.34" width="2048" height="2048" />
     <div class="desc">Fleecestoff &#8211; jeansblau</div>
