--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -182,13 +182,13 @@ padding: 16px;
     <div class="desc">Fleecestoff </div> <div class="desc"> schwarz</div>
 
   <img src="unistoff/WhatsApp Image 2021-09-16 at 16.38.34.jpeg" alt="WhatsApp Image 2021-09-16 at 16.38.34" title="WhatsApp Image 2021-09-16 at 16.38.34" width="2048" height="2048" />
-    <div class="desc">Fleecestoff &#8211; jeansblau</div>
+    <div class="desc">Fleecestoff </div> <div class="desc"> jeansblau</div>
 
   <img src="unistoff/WhatsApp Image 2021-09-16 at 16.38.51.jpeg" alt="WhatsApp Image 2021-09-16 at 16.38.51" title="WhatsApp Image 2021-09-16 at 16.38.51" width="2048" height="2048" />
-    <div class="desc">Fleecestoff &#8211; blau</div>
+    <div class="desc">Fleecestoff </div> <div class="desc"> blau</div>
 
   <img src="unistoff/WhatsApp Image 2021-09-16 at 16.40.15.jpeg" alt="WhatsApp Image 2021-09-16 at 16.40.15" title="WhatsApp Image 2021-09-16 at 16.40.15" width="2048" height="2048" />
-    <div class="desc">Ripperjersey &#8211; rosa</div>
+    <div class="desc">Ripperjersey </div> <div class="desc"> rosa</div>
 
   <img src="unistoff/WhatsApp Image 2021-09-16 at 16.40.42.jpeg" alt="WhatsApp Image 2021-09-16 at 16.40.42" title="WhatsApp Image 2021-09-16 at 16.40.42" width="2048" height="2048" />
     <div class="desc">Ripperjersey &#8211; hellbraun</div>
