--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -285,7 +285,7 @@ padding: 16px;
     <div class="desc">Musselin </div> <div class="desc"> Punkte rost</div>
             
   <img src="punktestoff/WhatsApp Image 2021-09-16 at 17.18.39.jpeg" alt="WhatsApp Image 2021-09-16 at 17.18.39" title="WhatsApp Image 2021-09-16 at 17.18.39" width="2048" height="2048" />
-    <div class="desc">Baumwolljersey</div> <div class="desc"> Leo gelb</div>
+    <div class="desc">Baumwolljersey</div><div class="desc"> Leo gelb</div> <br>
             
   <img src="punktestoff/WhatsApp Image 2021-09-16 at 17.18.57.jpeg" alt="WhatsApp Image 2021-09-16 at 17.18.57" title="WhatsApp Image 2021-09-16 at 17.18.57" width="2048" height="2048" />
     <div class="desc">Baumwolljersey </div> <div class="desc"> Leo gruen</div>
@@ -407,169 +407,169 @@ padding: 16px;
   <div class="gallery">
 
   <img src="/stoffe/WhatsApp Image 2021-09-16 at 17.31.26.jpeg" alt="WhatsApp Image 2021-09-16 at 17.31.26" title="WhatsApp Image 2021-09-16 at 17.31.26" width="2048" height="2048" />
-    <div class="desc">Baumwolljersey &#8211; Elephanten blaugrau</div>
+    <div class="desc">Baumwolljersey</div> <div class="desc"> Elephanten blaugrau</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.32.03.jpeg" alt="WhatsApp Image 2021-09-16 at 17.32.03" title="WhatsApp Image 2021-09-16 at 17.32.03" width="2048" height="2048" />
-    <div class="desc">Baumwolljersey &#8211; Elephanten blau</div>
+    <div class="desc">Baumwolljersey</div> <div class="desc"> Elephanten blau</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.32.24.jpeg" alt="WhatsApp Image 2021-09-16 at 17.32.24" title="WhatsApp Image 2021-09-16 at 17.32.24" width="2048" height="2048" />
-    <div class="desc">Baumwolljersey &#8211; Elephanten gelb</div>
+    <div class="desc">Baumwolljersey</div> <div class="desc"> Elephanten gelb</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.32.47.jpeg" alt="WhatsApp Image 2021-09-16 at 17.32.47" title="WhatsApp Image 2021-09-16 at 17.32.47" width="2048" height="2048" />
-  <div class="desc">Baumwolljersey &#8211; Elephanten</div>
+  <div class="desc">Baumwolljersey</div> <div class="desc"> Elephanten</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.33.43.jpeg" alt="WhatsApp Image 2021-09-16 at 17.33.43" title="WhatsApp Image 2021-09-16 at 17.33.43" width="2048" height="2048" />
-   <div class="desc">Baumwolljersey &#8211; Guerteltiere blau</div>
+   <div class="desc">Baumwolljersey</div> <div class="desc"> Guerteltiere blau</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.34.08.jpeg" alt="WhatsApp Image 2021-09-16 at 17.34.08" title="WhatsApp Image 2021-09-16 at 17.34.08" width="2048" height="2048" />
-  <div class="desc">Baumwolljersey &#8211; Gürteltiere Mint</div>
+  <div class="desc">Baumwolljersey </div> <div class="desc"> Gürteltiere Mint</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.34.41.jpeg" alt="WhatsApp Image 2021-09-16 at 17.34.41" title="WhatsApp Image 2021-09-16 at 17.34.41" width="2048" height="2048" />
-  <div class="desc">Baumwolljersey &#8211; Dinosaurier grau</div>
+  <div class="desc">Baumwolljersey</div> <div class="desc"> Dinosaurier grau</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.35.11.jpeg" alt="WhatsApp Image 2021-09-16 at 17.35.11" title="WhatsApp Image 2021-09-16 at 17.35.11" width="2048" height="2048" />
-    <div class="desc">Baumwolljersey &#8211; Dinosaurier gr&uuml;n</div>
+    <div class="desc">Baumwolljersey </div> <div class="desc"> Dinosaurier gr&uuml;n</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.35.28.jpeg" alt="WhatsApp Image 2021-09-16 at 17.35.28" title="WhatsApp Image 2021-09-16 at 17.35.28" width="2048" height="2048" />
-    <div class="desc">Baumwolljersey &#8211; Dinosaurier Skelett</div>
+    <div class="desc">Baumwolljersey </div> <div class="desc"> Dinosaurier Skelett</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.35.53.jpeg" alt="WhatsApp Image 2021-09-16 at 17.35.53" title="WhatsApp Image 2021-09-16 at 17.35.53" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; Dinosaurier Eier</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Dinosaurier Eier</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.36.26.jpeg" alt="WhatsApp Image 2021-09-16 at 17.36.26" title="WhatsApp Image 2021-09-16 at 17.36.26" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; Dinosaurier Natur</div>
+ <div class="desc">Baumwolljersey</div> <div class="desc"> Dinosaurier Natur</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.36.54.jpeg" alt="WhatsApp Image 2021-09-16 at 17.36.54" title="WhatsApp Image 2021-09-16 at 17.36.54" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; Drachen </div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Drachen </div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.37.32.jpeg" alt="WhatsApp Image 2021-09-16 at 17.37.32" title="WhatsApp Image 2021-09-16 at 17.37.32" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; Drachen Pink</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Drachen Pink</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.38.09.jpeg" alt="WhatsApp Image 2021-09-16 at 17.38.09" title="WhatsApp Image 2021-09-16 at 17.38.09" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; Safari Tiere</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Safari Tiere</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.38.51.jpeg" alt="WhatsApp Image 2021-09-16 at 17.38.51" title="WhatsApp Image 2021-09-16 at 17.38.51" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; Tiere blau</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Tiere blau</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.39.19.jpeg" alt="WhatsApp Image 2021-09-16 at 17.39.19" title="WhatsApp Image 2021-09-16 at 17.39.19" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; Superhelden</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Superhelden</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.39.43.jpeg" alt="WhatsApp Image 2021-09-16 at 17.39.43" title="WhatsApp Image 2021-09-16 at 17.39.43" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; Tiere grau</div>
+ <div class="desc">Baumwolljersey</div> <div class="desc"> Tiere grau</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.40.02.jpeg" alt="WhatsApp Image 2021-09-16 at 17.40.02" title="WhatsApp Image 2021-09-16 at 17.40.02" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; Tiere Indianer</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Tiere Indianer</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.40.29.jpeg" alt="WhatsApp Image 2021-09-16 at 17.40.29" title="WhatsApp Image 2021-09-16 at 17.40.29" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; bunte Tiere blau</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> bunte Tiere blau</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.41.48.jpeg" alt="WhatsApp Image 2021-09-16 at 17.41.48" title="WhatsApp Image 2021-09-16 at 17.41.48" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; grüne Wale</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> grüne Wale</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.42.15.jpeg" alt="WhatsApp Image 2021-09-16 at 17.42.15" title="WhatsApp Image 2021-09-16 at 17.42.15" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; Indianer Wale</div>
+ <div class="desc">Baumwolljersey</div> <div class="desc"> Indianer Wale</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.42.41.jpeg" alt="WhatsApp Image 2021-09-16 at 17.42.41" title="WhatsApp Image 2021-09-16 at 17.42.41" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; Meerestiere</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Meerestiere</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.43.28.jpeg" alt="WhatsApp Image 2021-09-16 at 17.43.28" title="WhatsApp Image 2021-09-16 at 17.43.28" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; grüne Krokodile</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> grüne Krokodile</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.43.50.jpeg" alt="WhatsApp Image 2021-09-16 at 17.43.50" title="WhatsApp Image 2021-09-16 at 17.43.50" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; Krokodile blau</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Krokodile blau</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.44.07.jpeg" alt="WhatsApp Image 2021-09-16 at 17.44.07" title="WhatsApp Image 2021-09-16 at 17.44.07" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; Löwe blau</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Löwe blau</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.44.39.jpeg" alt="WhatsApp Image 2021-09-16 at 17.44.39" title="WhatsApp Image 2021-09-16 at 17.44.39" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; Löwe Orange</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Löwe Orange</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.45.21.jpeg" alt="WhatsApp Image 2021-09-16 at 17.45.21" title="WhatsApp Image 2021-09-16 at 17.45.21" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; Pferde rosa</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Pferde rosa</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.45.39.jpeg" alt="WhatsApp Image 2021-09-16 at 17.45.39" title="WhatsApp Image 2021-09-16 at 17.45.39" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; Affenparty</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Affenparty</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.45.55.jpeg" alt="WhatsApp Image 2021-09-16 at 17.45.55" title="WhatsApp Image 2021-09-16 at 17.45.55" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; Bären blau</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Bären blau</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.46.16.jpeg" alt="WhatsApp Image 2021-09-16 at 17.46.16" title="WhatsApp Image 2021-09-16 at 17.46.16" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; Faultiere</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Faultiere</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.46.41.jpeg" alt="WhatsApp Image 2021-09-16 at 17.46.41" title="WhatsApp Image 2021-09-16 at 17.46.41" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; Faultiere dunkel</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Faultiere dunkel</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.47.21.jpeg" alt="WhatsApp Image 2021-09-16 at 17.47.21" title="WhatsApp Image 2021-09-16 at 17.47.21" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; Faultiere im Weltraum</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Faultiere im Weltraum</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.47.43.jpeg" alt="WhatsApp Image 2021-09-16 at 17.47.43" title="WhatsApp Image 2021-09-16 at 17.47.43" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; Zebra blau</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Zebra blau</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.48.06.jpeg" alt="WhatsApp Image 2021-09-16 at 17.48.06" title="WhatsApp Image 2021-09-16 at 17.48.06" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; Gute Nacht Tiere</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Gute Nacht Tiere</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.48.38.jpeg" alt="WhatsApp Image 2021-09-16 at 17.48.38" title="WhatsApp Image 2021-09-16 at 17.48.38" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; Bären</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Bären</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.49.18.jpeg" alt="WhatsApp Image 2021-09-16 at 17.49.18" title="WhatsApp Image 2021-09-16 at 17.49.18" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; Schäfchen und Wolf</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Schäfchen und Wolf</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.49.38.jpeg" alt="WhatsApp Image 2021-09-16 at 17.49.38" title="WhatsApp Image 2021-09-16 at 17.49.38" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; Lama Gelb</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Lama Gelb</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.50.06.jpeg" alt="WhatsApp Image 2021-09-16 at 17.50.06" title="WhatsApp Image 2021-09-16 at 17.50.06" width="2048" height="2048" />
- <div class="desc">Musselinstoff &#8211; Herbstblätter</div>
+ <div class="desc">Musselinstoff </div> <div class="desc"> Herbstblätter</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.50.22.jpeg" alt="WhatsApp Image 2021-09-16 at 17.50.22" title="WhatsApp Image 2021-09-16 at 17.50.22" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; Blumen</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Blumen</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.50.51.jpeg" alt="WhatsApp Image 2021-09-16 at 17.50.51" title="WhatsApp Image 2021-09-16 at 17.50.51" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; Herbstblätter</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Herbstblätter</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.51.22.jpeg" alt="WhatsApp Image 2021-09-16 at 17.51.22" title="WhatsApp Image 2021-09-16 at 17.51.22" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; Gr&uuml;ne Bl&auml;tter</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Gr&uuml;ne Bl&auml;tter</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.51.46.jpeg" alt="WhatsApp Image 2021-09-16 at 17.51.46" title="WhatsApp Image 2021-09-16 at 17.51.46" width="2048" height="2048" />
- <div class="desc">Musselinstoff &#8211; Bl&auml;tter</div>
+ <div class="desc">Musselinstoff </div> <div class="desc"> Bl&auml;tter</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.52.11.jpeg" alt="WhatsApp Image 2021-09-16 at 17.52.11" title="WhatsApp Image 2021-09-16 at 17.52.11" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; Vögel und Blätter</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Vögel und Blätter</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.52.29.jpeg" alt="WhatsApp Image 2021-09-16 at 17.52.29" title="WhatsApp Image 2021-09-16 at 17.52.29" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; Regenbogen</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Regenbogen</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.52.57.jpeg" alt="WhatsApp Image 2021-09-16 at 17.52.57" title="WhatsApp Image 2021-09-16 at 17.52.57" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; Regenbogen grün/gelb</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Regenbogen grün/gelb</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 18.01.46.jpeg" alt="WhatsApp Image 2021-09-16 at 18.01.46" title="WhatsApp Image 2021-09-16 at 18.01.46" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; Regenbögen Rosa</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Regenbögen Rosa</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 18.02.03.jpeg" alt="WhatsApp Image 2021-09-16 at 18.02.03" title="WhatsApp Image 2021-09-16 at 18.02.03" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; Wolken</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Wolken</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 18.03.43.jpeg" alt="WhatsApp Image 2021-09-16 at 18.03.43" title="WhatsApp Image 2021-09-16 at 18.03.43" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; Schmetterlinge blau</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Schmetterlinge blau</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 18.04.07.jpeg" alt="WhatsApp Image 2021-09-16 at 18.04.07" title="WhatsApp Image 2021-09-16 at 18.04.07" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; Blumen blau</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Blumen blau</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 18.04.37.jpeg" alt="WhatsApp Image 2021-09-16 at 18.04.37" title="WhatsApp Image 2021-09-16 at 18.04.37" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; Schmetterlinge Jeansblau</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Schmetterlinge Jeansblau</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 18.05.08.jpeg" alt="WhatsApp Image 2021-09-16 at 18.05.08" title="WhatsApp Image 2021-09-16 at 18.05.08" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; goldblaue Feder</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> goldblaue Feder</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 18.05.29.jpeg" alt="WhatsApp Image 2021-09-16 at 18.05.29" title="WhatsApp Image 2021-09-16 at 18.05.29" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; blaue Feder</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> blaue Feder</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 18.05.51.jpeg" alt="WhatsApp Image 2021-09-16 at 18.05.51" title="WhatsApp Image 2021-09-16 at 18.05.51" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; gelbe Federn</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> gelbe Federn</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 18.06.15.jpeg" alt="WhatsApp Image 2021-09-16 at 18.06.15" title="WhatsApp Image 2021-09-16 at 18.06.15" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; Natur</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Natur</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 18.06.37.jpeg" alt="WhatsApp Image 2021-09-16 at 18.06.37" title="WhatsApp Image 2021-09-16 at 18.06.37" width="2048" height="2048" />
- <div class="desc">Baumwolljersey &#8211; rote Blumen</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> rote Blumen</div>
 
  <img src="stoffe/WhatsApp Image 2021-09-16 at 18.07.02.jpeg" alt="WhatsApp Image 2021-09-16 at 18.07.02" title="WhatsApp Image 2021-09-16 at 18.07.02" width="2048" height="2048" />
  <div class="desc">Baumwolljersey &#8211; Blumen blaurot</div>
