--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -6,7 +6,7 @@
     <title>Vergarnt und Zugenaeht</title>
     <link rel="stylesheet" href="mystyle.css">
     <style>
-
+#more {display: none;}
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
 .sidebar {padding-top: 15px;}
@@ -842,8 +842,25 @@ padding: 16px;
   document.getElementById("main").style.marginLeft= "0";
   }
   </script>
-   
-  
+
+   <!--see more button-->
+  <script>
+function myFunction() {
+  var dots = document.getElementById("dots");
+  var moreText = document.getElementById("more");
+  var btnText = document.getElementById("myBtn");
+
+  if (dots.style.display === "none") {
+    dots.style.display = "inline";
+    btnText.innerHTML = "Read more"; 
+    moreText.style.display = "none";
+  } else {
+    dots.style.display = "none";
+    btnText.innerHTML = "Read less"; 
+    moreText.style.display = "inline";
+  }
+}
+</script>
   
   
   
