--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -406,7 +406,7 @@ padding: 16px;
     <div class="desc">Baumwolljersey</div> <div class="desc"> senffarbene Sparkle</div>
     
     </span>
-<button onclick="myFunction()" id="myBtn1">Mehr ansehen!</button>
+<button onclick="myFunction()" id="myBtn1">Mehr ansehen bitte</button>
   
   </div>
   <br>
