--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -662,7 +662,7 @@ padding: 16px;
  <div class="desc">Baumwolljersey </div> <div class="desc"> Raketen blau</div>
     
     <img src="Weltraumstoffe/WhatsApp Image 2021-09-16 at 18.10.17.jpeg" alt="WhatsApp Image 2021-09-16 at 18.10.17" title="WhatsApp Image 2021-09-16 at 18.10.17" width="2048" height="2048" />
- <div class="desc">Baumwolljersey </div> <div class="desc"> Sonne Mond und Sterne</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Sonne Mond </div> <div class="desc"> und Sterne</div>
     
     <img src="Weltraumstoffe/WhatsApp Image 2021-09-16 at 18.10.34.jpeg" alt="WhatsApp Image 2021-09-16 at 18.10.34" title="WhatsApp Image 2021-09-16 at 18.10.34" width="2048" height="2048" />
  <div class="desc">Baumwolljersey </div> <div class="desc"> Planeten Rosa</div>
