--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -388,7 +388,7 @@ padding: 16px;
     <div class="desc">Baumwolljersey </div> <div class="desc"> gr&uuml;ne Sparkle</div>
             
   <img src="punktestoff/hellblauedreiecke.jpeg" alt="hellblaue Dreiecke" title="hell blaue Dreiecke" width="2048" height="2048" />
-    <div class="desc">Baumwolljersey </div> <div class="desc"> hellblaue Dreiecke</div>
+    <div class="desc">Baumwolljersey </div> <div class="desc"> hellblaue </div> <div class="desc">Dreiecke</div>
             
   <img src="punktestoff/pinkeherzchen.jpeg" alt="pinkeherzchen" title="pinke Herzchen" width="2048" height="2048" />
     <div class="desc">Baumwolljersey </div> <div class="desc"> pinke Herzchen</div>
