--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -810,7 +810,9 @@ padding: 16px;
      <div class="desc">Baumwolljersey </div> <div class="desc"> Erdbeeren </div>
     
     <img src="WhatsApp Unknown 2022-07-01 at 2.38.11 PM/WhatsApp Image 2022-06-28 at 6.10.18 PM (9).jpeg" alt="WhatsApp Image 2022-06-28 at 6.10.18 PM (9)" title="WhatsApp Image 2022-06-28 at 6.10.18 PM (9)" width="1023" height="1022" />
-     <div class="desc">Baumwolljersey </div> <div class="desc"> Eis </div>
+     <div class="desc">Baumwolljersey </div> <div class="desc"> Eis <br>
+    <br>
+    <br></div>
     
     <br>
     <br>
