--- a/src/index.html
+++ b/src/index.html
@@ -222,7 +222,7 @@ function closeNav() {
 
 
   <footer>
-      &copy; <em id="date"></em>Career Karma
+      &copy; <em id="2022"></em>Vergarntundzugenaeht
     </footer>
 
 </body>
