--- a/src/index.html
+++ b/src/index.html
@@ -68,6 +68,13 @@
 
 
 </style>
+      <script>
+     function todayDate(){
+        var d = new Date();
+        var n = d.getFullYear() + "  ";
+        return document.getElementById("date").innerHTML = n;
+      }
+   </script>
 </head>
 <body>
   
@@ -222,7 +229,7 @@ function closeNav() {
 
 
   <footer>
-      &copy; <em id="2022"></em>Vergarnt und Zugen&auml;ht All Rights Reserved
+      &copy; <em id="date"></em>Vergarnt und Zugen&auml;ht All Rights Reserved
     </footer>
 
 </body>
