--- a/src/index.html
+++ b/src/index.html
@@ -157,7 +157,7 @@
        <div class="gallery">
 
   <img src="kindermode/WhatsApp Image 2022-07-30 at 10.12.08 AM.jpeg" alt="WhatsApp Image 2021-09-16 at 16.30.17" title="WhatsApp Image 2021-09-16 at 16.30.17" width="2048" height="2048" />
-    <div class="desc"> hellgrau</div> <div class="desc">Baumwolljersey</div>  
+   <div class="desc">Wendejacke</div>  
 
   <img src="kindermode/WhatsApp Image 2022-07-30 at 10.12.09 AM (1).jpeg" alt="WhatsApp Image 2021-09-16 at 16.30.34" title="WhatsApp Image 2021-09-16 at 16.30.34" width="2048" height="2048" />
     <div class="desc"> ocker</div> <div class="desc">Baumwolljersey</div>  
@@ -167,10 +167,10 @@
     
     <span id="dots">...</span><span id="more">
     
-  <img src="unistoff/WhatsApp Image 2021-09-16 at 16.31.02.jpeg" alt="WhatsApp Image 2021-09-16 at 16.31.02" title="WhatsApp Image 2021-09-16 at 16.31.02" width="2048" height="2048" />
+  <img src="kindermode/WhatsApp Image 2022-07-30 at 10.12.10 AM.jpeg" alt="WhatsApp Image 2021-09-16 at 16.31.02" title="WhatsApp Image 2021-09-16 at 16.31.02" width="2048" height="2048" />
     <div class="desc"> rot</div> <div class="desc">Baumwolljersey</div>  
 
-  <img src="unistoff/WhatsApp Image 2021-09-16 at 16.31.18.jpeg" alt="WhatsApp Image 2021-09-16 at 16.31.18" title="WhatsApp Image 2021-09-16 at 16.31.18" width="2048" height="2048" />
+  <img src="kindermode/WhatsApp Image 2022-07-30 at 10.22.33 AM (1).jpeg" alt="WhatsApp Image 2021-09-16 at 16.31.18" title="WhatsApp Image 2021-09-16 at 16.31.18" width="2048" height="2048" />
     <div class="desc"> hellblau</div> <div class="desc">Baumwolljersey</div>  
 
   <img src="unistoff/WhatsApp Image 2021-09-16 at 16.31.32.jpeg" alt="WhatsApp Image 2021-09-16 at 16.31.32" title="WhatsApp Image 2021-09-16 at 16.31.32" width="2048" height="2048" />
