--- a/src/index.html
+++ b/src/index.html
@@ -173,36 +173,8 @@
   <img src="kindermode/WhatsApp Image 2022-07-30 at 10.22.33 AM (1).jpeg" alt="WhatsApp Image 2021-09-16 at 16.31.18" title="WhatsApp Image 2021-09-16 at 16.31.18" width="2048" height="2048" />
     <div class="desc"> hellblau</div> <div class="desc">Baumwolljersey</div>  
 
-  <img src="unistoff/WhatsApp Image 2021-09-16 at 16.31.32.jpeg" alt="WhatsApp Image 2021-09-16 at 16.31.32" title="WhatsApp Image 2021-09-16 at 16.31.32" width="2048" height="2048" />
+  <img src="kindermode/WhatsApp Image 2022-07-30 at 10.22.33 AM.jpeg" alt="WhatsApp Image 2021-09-16 at 16.31.32" title="WhatsApp Image 2021-09-16 at 16.31.32" width="2048" height="2048" />
     <div class="desc"> navy</div> <div class="desc">Baumwolljersey</div>  
-
-  <img src="unistoff/WhatsApp Image 2021-09-16 at 16.32.17.jpeg" alt="WhatsApp Image 2021-09-16 at 16.32.17" title="WhatsApp Image 2021-09-16 at 16.32.17" width="2048" height="2048" />
-    <div class="desc"> schwarz</div> <div class="desc">Baumwolljersey</div>  
-
-  <img src="unistoff/WhatsApp Image 2021-09-16 at 16.32.39.jpeg" alt="WhatsApp Image 2021-09-16 at 16.32.39" title="WhatsApp Image 2021-09-16 at 16.32.39" width="2048" height="2048" />
-    <div class="desc"> hellgrau</div> <div class="desc">Sommersweat </div> 
-
-  <img src="unistoff/WhatsApp Image 2021-09-16 at 16.32.53.jpeg" alt="WhatsApp Image 2021-09-16 at 16.32.53" title="WhatsApp Image 2021-09-16 at 16.32.53" width="2048" height="2048" />
-    <div class="desc"> dunkelgrau</div> <div class="desc">Sommersweat </div>
-
-  <img src="unistoff/WhatsApp Image 2021-09-16 at 16.33.16.jpeg" alt="WhatsApp Image 2021-09-16 at 16.33.16" title="WhatsApp Image 2021-09-16 at 16.33.16" width="2048" height="2048" />
-    <div class="desc">Sommersweat </div> <div class="desc"> ocker</div>
-
-  <img src="unistoff/WhatsApp Image 2021-09-16 at 16.33.29.jpeg" alt="WhatsApp Image 2021-09-16 at 16.33.29" title="WhatsApp Image 2021-09-16 at 16.33.29" width="2048" height="2048" />
-    <div class="desc">Sommersweat </div> <div class="desc"> rost</div>
-
- <img src="unistoff/WhatsApp Image 2021-09-16 at 16.33.52.jpeg" alt="WhatsApp Image 2021-09-16 at 16.33.52" title="WhatsApp Image 2021-09-16 at 16.33.52" width="2048" height="2048" />
-    <div class="desc">Sommersweat </div> <div class="desc"> blau</div>
-
-  <img src="unistoff/WhatsApp Image 2021-09-16 at 16.34.17.jpeg" alt="WhatsApp Image 2021-09-16 at 16.34.17" title="WhatsApp Image 2021-09-16 at 16.34.17" width="2048" height="2048" />
-    <div class="desc">Sommersweat </div> <div class="desc"> indigoblau</div>
-
-  <img src="unistoff/WhatsApp Image 2021-09-16 at 16.34.40.jpeg" alt="WhatsApp Image 2021-09-16 at 16.34.40" title="WhatsApp Image 2021-09-16 at 16.34.40" width="2048" height="2048" />
-    <div class="desc">Sommersweat </div> <div  class="desc"> gr&uuml;n</div>
-
-
-
-  
 
     
     </span>
