--- a/src/index.html
+++ b/src/index.html
@@ -180,7 +180,7 @@
      <div class="desc">Pumphose</div>  
            <img src="kindermode/WhatsApp Image 2022-07-30 at 10.22.34 AM.jpeg" alt="WhatsApp Image 2021-09-16 at 16.31.32" title="WhatsApp Image 2021-09-16 at 16.31.32" width="2048" height="2048" />
      <div class="desc">Pumphose</div>  
-           <img src="kindermode/WhatsApp Image 2022-07-30 at 10.22.33 AM.jpeg" alt="WhatsApp Image 2021-09-16 at 16.31.32" title="WhatsApp Image 2021-09-16 at 16.31.32" width="2048" height="2048" />
+           <img src="kindermode/WhatsApp Image 2022-07-30 at 10.22.35 AM (1).jpeg" alt="WhatsApp Image 2021-09-16 at 16.31.32" title="WhatsApp Image 2021-09-16 at 16.31.32" width="2048" height="2048" />
      <div class="desc">Pumphose</div>  
 </span>
 <button onclick="myFunction()" id="myBtn">Mehr ansehen</button>
