--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
 <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#800000">
 <meta name="msapplication-TileColor" content="#ac8181">
 <meta name="theme-color" content="#ffffff">
+  <meta name="selbstgenaehte, kindermode, pumphosen, sets, stoffe, vergarnt, zugenaeht" content="HTML,CSS,XML,JavaScript">
+  <meta name="author" content="Ale">
     <style>
  #more {display: none;}
 
