--- a/src/index.html
+++ b/src/index.html
@@ -391,9 +391,14 @@ function myFunction() {
 <div class="center">
   <h4> <small>
   
-  <b><a href="impressum.html" target="_blank" style="color:dimgrey" >Impressum</a></b>
-  <b><a href="datenschutz.html" target="_blank" style="color:dimgrey" >Datenschutz</a></b>
-  <b><a href="agb.html" target="_blank" style="color:dimgrey" >AGB</a></b>
+ 
+      
+      <ul id="footerlinks">
+      <li><a id="link1" href="impressum.html" target="_blank" style="color:dimgrey" >Impressum</a></a></li>
+      <li><a id="link2" href="datenschutz.html" target="_blank" style="color:dimgrey" >Datenschutz</a></li>
+      <li><a id="link3" href="agb.html" target="_blank" style="color:dimgrey" >AGB</a></a></li>
+     
+    </ul>
 </small>
   </h4>
 </div>
