--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -61,6 +61,21 @@ transition: margin-left .5s;
 padding: 16px;
 }
 
+div.item {
+    vertical-align: top;
+    display: inline-block;
+    text-align: center;
+    width: 120px;
+}
+img {
+    width: 100px;
+    height: 100px;
+    background-color: grey;
+}
+.caption {
+    display: block;
+}
+
 </style>
 <script>
      function todayDate(){
@@ -303,13 +318,14 @@ padding: 16px;
   <img src="punktestoff/WhatsApp Image 2021-09-16 at 17.18.12.jpeg" alt="WhatsApp Image 2021-09-16 at 17.18.12" title="WhatsApp Image 2021-09-16 at 17.18.12" width="2048" height="2048" />
     <div class="desc">Musselin </div> <div class="desc"> Punkte rost</div>
       
-   <span style="color:blue">
+   
  	 <img src="punktestoff/WhatsApp Image 2021-09-16 at 17.18.39.jpeg" alt="WhatsApp Image 2021-09-16 at 17.18.39" title="WhatsApp Image 2021-09-16 at 17.18.39" width="2048" height="2048" />
    	 <div class="desc">Baumwolljersey</div> <div class="desc">Leo gelb</div>
-   </span>
-            
+
+       <div class="item">
   <img src="punktestoff/WhatsApp Image 2021-09-16 at 17.18.57.jpeg" alt="WhatsApp Image 2021-09-16 at 17.18.57" title="WhatsApp Image 2021-09-16 at 17.18.57" width="2048" height="2048" />
-    <div class="desc">Baumwolljersey </div> <div class="desc"> Leo gr&uuml;n</div>
+    <span class="caption">BaumwolljerseyLeo gr&uuml;n</span>
+  </div>  
   
     <img src="punktestoff/WhatsApp Image 2021-09-16 at 17.19.11.jpeg" alt="WhatsApp Image 2021-09-16 at 17.19.11" title="WhatsApp Image 2021-09-16 at 17.19.11" width="2048" height="2048" />
     <div class="desc">Baumwolljersey </div> <div class="desc"> Leo rost</div>
