--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -317,11 +317,12 @@ img {
             
   <img src="punktestoff/WhatsApp Image 2021-09-16 at 17.18.12.jpeg" alt="WhatsApp Image 2021-09-16 at 17.18.12" title="WhatsApp Image 2021-09-16 at 17.18.12" width="2048" height="2048" />
     <div class="desc">Musselin </div> <div class="desc"> Punkte rost</div>
-      
+         <div class="item">
    
  	 <img src="punktestoff/WhatsApp Image 2021-09-16 at 17.18.39.jpeg" alt="WhatsApp Image 2021-09-16 at 17.18.39" title="WhatsApp Image 2021-09-16 at 17.18.39" width="2048" height="2048" />
    	 <div class="desc">Baumwolljersey</div> <div class="desc">Leo gelb</div>
-
+   </div>
+   
        <div class="item">
   <img src="punktestoff/WhatsApp Image 2021-09-16 at 17.18.57.jpeg" alt="WhatsApp Image 2021-09-16 at 17.18.57" title="WhatsApp Image 2021-09-16 at 17.18.57" width="2048" height="2048" />
     <span class="caption">BaumwolljerseyLeo gr&uuml;n</span>
